result/subtask06-if/testcase01.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
> Insert `apple` (addr: 1) to scope level 1
INT_LIT 0
/home/share/hw2/input/subtask06-if/testcase01.cpp:3:5: error:  syntax error
     3 |    if  apple == 0 ) {
       |    ^
Total lines: 3
